--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -67,11 +67,10 @@
 <div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-planning.jpg'"
     [references]="references[HeroSection.PLANNING]">
     <h1 class="text-2xl md:text-3xl">Planning first</h1>
-    <p class="md:text-lg xl:text-xl">Every long lasting product has a well-designed, solid plan behind it. Software are
-        not exceptions. My workflow always starts with proper preparations and planning, resulting in:</p>
+    <p class="md:text-lg xl:text-xl">Every long-lasting product has a well-designed, solid plan behind it. Software is no exception. My workflow always starts with proper preparations and planning, resulting in:</p>
     <ul class="md:text-lg xl:text-xl list-disc ps-8">
-        <li>Decision support documentations</li>
-        <li>Design documentations</li>
+        <li>Decision support documentation</li>
+        <li>Design documentation</li>
         <li>System plans</li>
         <li>Sequence diagrams</li>
         <li>Class diagrams</li>
@@ -87,14 +86,8 @@
 
 <div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-spatial.jpg'" [flip]="true" [references]="references[HeroSection.SPATIAL]">
     <h1 class="text-2xl md:text-3xl">Spatially enabled</h1>
-    <p class="md:text-lg xl:text-xl pb-4">Have you thought about how much more we are relying on digital maps and
-        navigation systems over the past few decades? With the explosive revolution of digitalization and informatics
-        ceasing into basic literacy in business and everyday life, new trends are emerging. As spatial algorithms and
-        systems becoming more common, our location awareness is also firmly increasing. Spatiality is slowly becoming an
-        essential part of decision making and business intelligence.</p>
-    <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information System)s, spatial
-        problems won't cause any roadblocks. From creating traditional GIS models to planning and creating complete Web GIS
-        solutions, I'm capable and happy to help.</p>
+    <p class="md:text-lg xl:text-xl pb-4">Have you ever considered how our reliance on digital maps and navigation systems has increased in the past few decades? With the explosive revolution of digitalization and informatics ceasing into basic literacy in business and everyday life, new trends are emerging in the IT field. As spatial algorithms and systems become more common, our location awareness is also firmly increasing. Spatiality is slowly becoming an essential part of decision-making and business intelligence.</p>
+    <p class="md:text-lg xl:text-xl">Having a PhD done around Web-based GIS (Geographic Information Systems), spatial problems won't cause any roadblocks. From creating traditional GIS models to planning and creating complete Web GIS solutions, I'm capable and happy to help.</p>
     <span attribution>Photo by <a
             href="https://unsplash.com/@geojango_maps?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">GeoJango
             Maps</a> on <a
@@ -103,18 +96,11 @@
 
 <div class="hero-section w-full my-10 text-center md:text-left" [background]="'assets/bg-science.jpg'" [references]="references[HeroSection.SCIENCE]">
     <h1 class="text-2xl md:text-3xl">Based in science</h1>
-    <p class="md:text-lg xl:text-xl">What my research days really taught me is every complicated problem has a unique
-        optimal solution. While optimal is usually unfeasible to pursue in business scenarios, it is always good to try
-        and approximate with critical thinking and holistic evaluation. Computer science students usually ask me what
-        good can a MSc in geography do to you; well, for example, the ability to think critically and evaluate problems
-        with a holistic view.</p>
+    <p class="md:text-lg xl:text-xl">What my days in research taught me is every complicated problem has a unique optimal solution. While optimal is usually unfeasible to pursue in business scenarios, it is always good to try and approximate it with critical thinking and holistic evaluation. Computer science students sometimes ask me: what good can an MSc in geography do for you? Well, for example, the ability to think critically and evaluate problems from a holistic view.</p>
     <ul class="md:text-lg xl:text-xl list-disc ps-8">
-        <li>It's no use to swing around with patterns and methods just to look smart (even with Scrum... especially with
-            Scrum). Always understand the problem and its context first.</li>
-        <li>Modern problems are usually too complicated for pure solutions. Don't be afraid to apply hybrid ones even by
-            mixing patterns from different disciplines.</li>
-        <li>Always try to look at the full picture. Sometimes it's better to start with a less complicated stack than
-            making a fresh team choke on quality.</li>
+        <li>It's no use to swing around with patterns and methods to look smart (even with Scrum... especially Scrum). Always understand the problem and its context first.</li>
+        <li>Modern problems are usually too complicated for pure solutions. Don't be afraid to apply hybrid ones, even by mixing patterns from different disciplines.</li>
+        <li>Always try to look at the complete picture. Sometimes, it is better to start with a less complicated stack than making a fresh team choke on quality.</li>
     </ul>
     <span attribution>Photo by <a
             href="https://unsplash.com/@omilaev?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Igor
@@ -124,13 +110,8 @@
 
 <div class="hero-section w-full mt-10 text-center md:text-left" [background]="'assets/bg-lecture.jpg'" [flip]="true" [references]="references[HeroSection.TEACHING]">
     <h1 class="text-2xl md:text-3xl">Love to share</h1>
-    <p class="md:text-lg xl:text-xl pb-4">With a teaching history of almost a decade mostly pivoting around teaching
-        cutting-edge software development and architecture to international computer science bachelor candidates,
-        quality mentoring is always in the picture.</p>
-    <p class="md:text-lg xl:text-xl">Finding teaching methods providing the best value in such a practice-oriented fast
-        evolving field is a big challenge. My teaching habits both in and out of the university are based on experience
-        rather than textbooks. Material is created and adjusted on the go, and tries to encompass both most recent
-        trends and my most recent experience with patterns and best practices.</p>
+    <p class="md:text-lg xl:text-xl pb-4">With a teaching history of almost a decade, mostly pivoting around teaching cutting-edge software development and architecture to international computer science bachelor candidates, quality mentoring is always in the picture.</p>
+    <p class="md:text-lg xl:text-xl">Finding teaching methods providing the best value in such a practice-oriented, progressive field is a big challenge. My teaching habits, both in and out of the university, are based on experience rather than textbooks. Material is created and adjusted on the go and tries to encompass both the most recent trends and my most recent experience with patterns and best practices.</p>
     <span attribution>Photo by <a
             href="https://unsplash.com/@dylandgillis?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Dylan
             Gillis</a> on <a
@@ -141,9 +122,7 @@
 <ng-template #longTermScene>
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">Your destiny awaits</h1>
-        <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">As leader of a high-tech SME, you are on the verge of joining the
-            big leagues. You realize the competencies your company will need to scale and wonder, how should you
-            build your team up. Let me help you in making this process as pleasant as it should always be.</p>
+        <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">As the leader of a high-tech SME, you are on the verge of joining the big leagues. You realize the competencies your company will need to scale and wonder how you should build your team up. Let me help you make this process as pleasant as it can be.</p>
         <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.PARTNERSHIP">How it works?</a>
     </div>
 </ng-template>
@@ -151,9 +130,7 @@
 <ng-template #shortTermScene>
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">Just a stretch</h1>
-        <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Sometimes, all of us need a little help, no matter if you are
-            directing a multinational company, a small family business, or a particle collider. If you need a
-            quick look on a software issue from an outside expert, make sure to reach out.</p>
+        <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Sometimes, everyone needs a little help, regardless if you are directing a multinational company, a small family business, or a particle collider. If you need a quick look at a software issue from an outside expert, make sure to reach out.</p>
         <a class="btn md:text-lg xl:text-xl" href="#">Looking for a counsel?</a>
     </div>
 </ng-template>
@@ -161,9 +138,7 @@
 <ng-template #researchScene>
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">STEMming from academia</h1>
-        <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Most of the complex IT problems have unique optimal solutions with
-            slightly different design patterns. However, there is a single common rule for every problem: the
-            best method is the scientific method.</p>
+        <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Most of the complex IT problems have unique optimal solutions with slightly different design patterns. However, there is a single common rule for every issue: the best method is the scientific method.</p>
         <a class="btn md:text-lg xl:text-xl" href="#">Read more</a>
     </div>
 </ng-template>
