Add new home page reference

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -131,7 +131,7 @@
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">Just a stretch</h1>
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Sometimes, everyone needs a little help, regardless if you are directing a multinational company, a small family business, or a particle collider. If you need a quick look at a software issue from an outside expert, make sure to reach out.</p>
-        <a class="btn md:text-lg xl:text-xl" href="#">Looking for a counsel?</a>
+        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.COUNSELING">Looking for a counsel?</a>
     </div>
 </ng-template>
 
