Add UI/UX section to counseling page

--- a/src/pages/counseling/counseling.page.html
+++ b/src/pages/counseling/counseling.page.html
@@ -106,7 +106,14 @@
 
     <div class="col-decorated text-lg pb-12" [references]="references[Section.UIUX]">
         <h1 class="text-center">UI/UX</h1>
-        <p class="pb-6"></p>
+        <p class="pb-6">I like to create clean and intuitive user interfaces. While not a creative myself, I have plenty of experience working with custom designs and UI templates. In my opinion, the secret of designing great user interfaces and giving the best user experience is knowing your audience and therefore, having a basic but firm understanding of the human psyche. This knowledge is dangerous though, as the more you understand, the more damage you can do without noticing. Therefore, my most important rule in UI/UX design is: always satisfy and never exploit.</p>
+        <p class="pb-6">I usually move on the Bootstrap - Tailwind axis when creating web interfaces. If there are no design plans available, I like to customize Bootstrap UI elements. If there are design plans or more complicated ideas, I usually stick with Tailwind. Also, I'm looking forward to trying Web Awesome for template UIs. In this area, I can help you with:</p>
+        <ul class="list-disc pl-12">
+            <li>Implementing design (especially Figma) plans.</li>
+            <li>Creating clean and maintainable mobile-first responsive web UIs.</li>
+            <li>Improving user experience with slightly more complicated UI logic.</li>
+            <li>Improving user experience through gamification.</li>
+        </ul>
     </div>
 
     <div class="col-decorated text-lg pb-12" [references]="references[Section.INFRASTRUCTURE]">
@@ -118,4 +125,6 @@
         <h1 class="text-center">Project management</h1>
         <p class="pb-6"></p>
     </div>
+
+    <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-12">Things good to know</h1>
 </div>
