Add terms to counseling page

--- a/src/pages/home/home.page.html
+++ b/src/pages/home/home.page.html
@@ -139,6 +139,6 @@
     <div class="w-full lg:w-2/4 p-6 text-center lg:text-left">
         <h1 class="text-2xl md:text-3xl xl:text-4xl lg:text-left">STEMming from academia</h1>
         <p class="text-justify lg:text-left md:text-lg xl:text-xl mb-6 lg:mb-10">Most of the complex IT problems have unique optimal solutions with slightly different design patterns. However, there is a single common rule for every issue: the best method is the scientific method.</p>
-        <a class="btn md:text-lg xl:text-xl" href="#">Read more</a>
+        <a class="btn md:text-lg xl:text-xl" [href]="'/' + PageUrlMapping.ABOUT">Read more</a>
     </div>
 </ng-template>
