--- a/src/pages/counseling/counseling.page.html
+++ b/src/pages/counseling/counseling.page.html
@@ -86,6 +86,7 @@
             <li>Creating, modifying, extending plan documentation.</li>
             <li>Redesigning software architecture into a scalable form.</li>
             <li>Writing and reviewing specifications.</li>
+            <li>Spatial algorithms and GIS software structure.</li>
         </ul>
     </div>
 
@@ -139,5 +140,14 @@
         </ul>
     </div>
 
-    <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-12">Things to know</h1>
+    <h1 class="px-6 md:px-0 lg:text-3xl lg:pb-12">Terms and conditions</h1>
+    <div class="w-full bg-primary-accent rounded-lg flex justify-center mb-4">
+        <fa-icon class="text-primary py-4" [icon]="faFileContract" size="2xl"></fa-icon>
+    </div>
+    <p class="md:text-lg pb-6 px-6 md:px-0">For occasional counsel, I don't require any formal papers. For short-term projects spanning over at least two months, we sign a framework contract, the content of which must reflect the specific needs of you or your company. Please keep in mind that I normally don't sign anything limiting my freedom, such as exclusivity contracts. On the other hand, I'm happy to sign any non-disclosure agreement. I'm also open to helping you phrase certificates of completion or other documentation you or your company needs.</p>
+
+    <div class="w-full bg-primary-accent rounded-lg flex justify-center mb-4">
+        <fa-icon class="text-primary py-4" [icon]="faMoneyBillWave" size="2xl"></fa-icon>
+    </div>
+    <p class="md:text-lg pb-12 px-6 md:px-0">Counsels and short-term projects are billed on a project basis. We agree on the costs before we start collaborating, and you receive an invoice either at the end of the project or at every milestone we define. Project quotes contain sensible buffers, thus, minor adjustments won't alter the costs.</p>
 </div>
