--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Chivo:ital,wght@0,100..900;1,100..900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+
+    <meta property="og:title" content="Farkas Gábor e.v. team building & counseling">
+    <meta property="og:description" content="Every long-lasting product has a well-designed, solid plan behind it. Software is no exception.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/bg-lecture.jpg">
+    <meta name="twitter:card" content="summary">
 </head>
 
 <body class="bg-primary">
