Add 404 story page

--- a/src/pages/story/story.page.html
+++ b/src/pages/story/story.page.html
@@ -1,4 +1,6 @@
-This is a story page
+<div *ngIf="type !== StoryType.UNKNOWN">
+Here be story header
+</div>
 <ng-container *ngIf="component">
-    <ng-container *ngComponentOutlet="component"></ng-container>
+    <ng-container *ngComponentOutlet="component; inputs: type === StoryType.UNKNOWN ? {text: 'Uh oh! This story must have been left for a journey.'} : {}"></ng-container>
 </ng-container>
