--- a/src/pages/stories/stories.page.html
+++ b/src/pages/stories/stories.page.html
@@ -1,10 +1,17 @@
-<div class="max-w-8xl m-auto pt-6">
-    <div class="w-full" [ngSwitch]="type">
-        <h1 *ngSwitchCase="StoryType.INSIGHT">Insights</h1>
-        <h1 *ngSwitchCase="StoryType.CASESTUDY">Case studies</h1>
-        <h1 *ngSwitchCase="StoryType.UNKNOWN">Y̵̢̹̓͝ö̴̬́̿ǘ̴̡ ̸̧̙̈́j̸̹̱̚u̸͎̤͝͠s̵͈͛t̵͐̈́͜ ̵͖͂͗b̷̬̅̈r̷͖̀o̷̼̽͑k̶̠̀e̷͍͌̿ ̶͕̬͆̽t̸̻̮̕h̴̦͛ĕ̸̲ ̶̺̅s̶̺̏y̷̲͛s̸̖̿̇ṯ̶̃͛e̶̱̓m̸̡͋̒</h1>
+<div class="max-w-8xl m-auto pt-6 md:px-6">
+    <div class="w-full pb-12" [ngSwitch]="type">
+        <h1 *ngSwitchCase="StoryType.INSIGHT" class="text-3xl">Insights</h1>
+        <p *ngSwitchCase="StoryType.INSIGHT" class="text-lg">These stories are inspired by various, more fascinating aspects of my everyday work, aiming at granting you some insight into my general mindset through anecdotes. In these stories, I try to keep unique cases at a minimum and focus on patterns you will most likely meet at some point in some form. Based on real events.</p>
+        <h1 *ngSwitchCase="StoryType.CASESTUDY" class="text-3xl">Case studies</h1>
+        <p *ngSwitchCase="StoryType.CASESTUDY" class="text-lg">These stories encompass single events (e.g. a project or just part of it) holding significant lessons shaping my professional experience, attitude, or view. I try to phrase these stories to remain engaging while their main focus is to preserve and convey these lessons for you to take as well. Based on real events.</p>
+        <h1 *ngSwitchCase="StoryType.UNKNOWN" class="text-3xl">Y̵̢̹̓͝ö̴̬́̿ǘ̴̡ ̸̧̙̈́j̸̹̱̚u̸͎̤͝͠s̵͈͛t̵͐̈́͜ ̵͖͂͗b̷̬̅̈r̷͖̀o̷̼̽͑k̶̠̀e̷͍͌̿ ̶͕̬͆̽t̸̻̮̕h̴̦͛ĕ̸̲ ̶̺̅s̶̺̏y̷̲͛s̸̖̿̇ṯ̶̃͛e̶̱̓m̸̡͋̒</h1>
     </div>
-    <div *ngFor="let story of stories" class="card">
-        <a [href]="baseUrl + '/' + story.slug">{{story.description}}</a>
+    <div #storyGrid class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-12 pb-12">
+        <div *ngFor="let story of stories" class="card h-96">
+            <div class="w-full h-full flex items-center justify-center" faceUp>
+                <h1>{{story.title}}</h1>
+            </div>
+            <a class="w-full h-full flex items-center justify-center text-lg" faceDown [href]="baseUrl + '/' + story.slug">{{story.description}}</a>
+        </div>
     </div>
 </div>
