--- a/src/pages/story/story.page.html
+++ b/src/pages/story/story.page.html
@@ -1,4 +1,23 @@
-<div *ngIf="type !== StoryType.UNKNOWN">
-Here be story header
+<div class="max-w-8xl m-auto pt-6 md:px-6">
+    <div *ngIf="type !== StoryType.UNKNOWN">
+        <ul class="breadcrumbs text-lg pb-6">
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a [href]="'/' + baseUrl">{{categoryLabel}}</a>
+            </li>
+            <li>{{story.title}}</li>
+        </ul>
+        <h1 class="text-3xl pb-0">{{story.title}}</h1>
+        <div class="pb-2 text-xl" [ngSwitch]="type">
+            <i *ngSwitchCase="StoryType.INSIGHT">An insight story</i>
+            <i *ngSwitchCase="StoryType.CASESTUDY">A case study</i>
+        </div>
+        <p>Published at {{story.created.toLocaleString()}}</p>
+        <p class="pb-12">Last updated at {{story.lastModified.toLocaleString()}}</p>
+    </div>
+    <div class="pb-12">
+        <router-outlet />
+    </div>
 </div>
-<router-outlet />
