Add simple analytics integration

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 
 <body class="bg-primary">
     <app-root></app-root>
+    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 </body>
 
 </html>
