--- a/src/pages/stories/stories.page.html
+++ b/src/pages/stories/stories.page.html
@@ -28,7 +28,7 @@
                 <div class="absolute w-full h-full top-0 left-0 bg-cover blur-xs"
                     [style]="{'background-image': 'url(' + story.thumbUrl + ')'}"></div>
                 <div class="flex items-center justify-center absolute w-full h-full top-0 left-0">
-                    <h1 class="text-center">{{story.title}}</h1>
+                    <h1 class="text-center glow-white">{{story.title}}</h1>
                 </div>
             </div>
             <div class="w-full h-full flex flex-col items-center justify-center text-lg bg-secondary" faceDown>
