Fix OG image link

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Farkas Gábor e.v. team building & counseling">
     <meta property="og:description" content="Every long-lasting product has a well-designed, solid plan behind it. Software is no exception.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/bg-lecture.jpg">
+    <meta property="og:image" content="/assets/bg-lecture.jpg">
     <meta name="twitter:card" content="summary">
 </head>
 
